--- a/ML.html
+++ b/ML.html
@@ -104,7 +104,7 @@
         <h5 > Visualizing image recogntion models' representations </h5>
         <h6 style="margin-top:0%;align:justify;">
           The biggest critique and scare of the usage of <a href="https://en.wikipedia.org/wiki/Deep_learning">deep neural networks</a> is that we don't know how exactly they compute.
-          They're being called black models for that reason.
+          They're being called black box models for that reason.
           Various attempts have been made to get a better understanding of it, by presenting images, and visualizing the representations in different layers.
           One other way to do this is synthesizing input images by using gradient-ascent to maximise classification score on a selected class, filter, or neuron.
           This is called <a href="https://pdfs.semanticscholar.org/65d9/94fb778a8d9e0f632659fb33a082949a50d3.pdf">Activation Maximization</a>.
