--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
 
     <div class="twelve columns fade" > <center>
-      <h5 style="margin-top:0%;max-width:60%;">This is a portfolio containing some creative and ML-research endeavors.
+      <h5 style="margin-top:0%;max-width:70%;">This is a portfolio containing some creative and Machine-learning research endeavors.
       You'll find my artistic machine-learning research projects, alongside illustration and photography.
       </h5></center>
     </div>
