--- a/ML.html
+++ b/ML.html
@@ -71,7 +71,7 @@
       </div>
 
     <!-- word –––––––––––––––––––––-–––– -->
-    <div class="four columns fade" > <center> <a id="link" href= "Photography.html"> <h4 style="margin-top:0%">Photography</h4> </a></center>
+    <div class="four columns fade" > <center> <a id="link" href= "Music.html"> <h4 style="margin-top:0%">Music</h4> </a></center>
     </div>
     </div>
     <div class=" twelve columns" >
