--- a/Music.html
+++ b/Music.html
@@ -71,16 +71,24 @@
       </div>
 
     <!-- word –––––––––––––––––––––-–––– -->
-    <div class="four columns fade" > <center> <a id="link" href= "Photography.html"> <h4 style="margin-top:0%">Photography</h4> </a></center>
+    <div class="four columns fade" > <center> <a id="link" href= "Music.html"> <h4 style="margin-top:0%">Music</h4> </a></center>
     </div>
     </div>
 
     <div class=" twelve columns fade" > <center>
-      <h6 style="margin-top:0%;max-width:60%;">This is a portfolio containing some of my favorite creative endeavors.
-        You'll find my digital machine-learning works, alongside illustration and photography projects.
-        The machine-learning work is mostly reinforcement-learning and image recognition.
+      <h6 style="margin-top:0%;max-width:60%;">This music builds on earlier work by Japanese artists united under the earth music genre.
+        Earth music is an ambient music form that is mostly inspired by nature. Originally it gained traction during the vast urbanisation of tokyo, because it enabled connecting to nature again.
+        What I like is its jazz-like complexity in soundscape designs, which draws one inside, and ranges more towards a meditative practice rather than 'bein entertained'
+        My project uses samples from native instruments, and explores applying machine learning for melody and rhythm generation.
       </h6></center>
     </div>
+    <div class=" twelve columns fade" > <center>
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/773970745&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/779802631&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+    </center>
+    </div>
+
+
 
   </div>
 
