--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
-
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
@@ -83,13 +82,13 @@
       </div>
 
     <!-- word –––––––––––––––––––––-–––– -->
-    <div class="four columns fade" > <center> <a id="link" href="Photography.html"> <h4 style="margin-top:0%">Photography</h4> </a></center>
+    <div class="four columns fade" > <center> <a id="link" href="Music.html"> <h4 style="margin-top:0%">Music</h4> </a></center>
     </div>
     </div>
 
     <div class="twelve columns fade" > <center>
       <h5 style="margin-top:0%;max-width:70%;">This is a portfolio containing some creative and Machine-learning research endeavors.
-      You'll find my artistic machine-learning research projects, alongside illustration and photography.
+      You'll find my artistic machine-learning research projects, alongside illustration and earth-music explorations.
       </h5></center>
     </div>
     <div class="twelve columns fade" style="margin-top: 5%">
