--- a/Music.html
+++ b/Music.html
@@ -51,9 +51,11 @@
     </div>
     <div class="row">
       <div class="twelve columns fade" style="margin-top: 5%">
-        <center><img style="margin-bottom:0%" class="dimmed" src="images/intro/actmax0.png" alt="icon" width="20%">
-          <img style="margin-bottom:2%" class="dimmed" src="images/intro/actmax5.png" alt="icon" width="20%" opacity="0.5">
-          <img style="margin-bottom:6%"  src="images/intro/actmax2.png" alt="icon" width="20%";><center>
+        <center>
+          <a  href= "ML.html"><img style="margin-bottom:0%" class="dimmed" src="images/intro/actmax0.png" alt="icon" width="20%"></a>
+          <a  href= "Music.html"><img style="margin-bottom:2%" src="images/intro/actmax5.png" alt="icon" width="20%"></a>
+          <a  href= "index.html"><img style="margin-bottom:6%" class="dimmed" src="images/intro/actmax2.png" alt="icon" width="20%";></a>
+          <center>
 
       </div>
     </div>
@@ -67,26 +69,29 @@
       </div>
 
     <!--  music ––––––––––––––––––––––––– -->
-      <div class="four columns fade" > <center> <a id="link" href= "Illustrations.html"> <h4 style="margin-top:10%">Illustrations</h4> </a></center>
-      </div>
+
 
     <!-- word –––––––––––––––––––––-–––– -->
     <div class="four columns fade" > <center> <a id="link" href= "Music.html"> <h4 style="margin-top:0%">Music</h4> </a></center>
     </div>
-    </div>
 
     <div class=" twelve columns fade" > <center>
-      <h6 style="margin-top:0%;max-width:60%;">This music builds on earlier work by Japanese artists united under the earth music genre.
-        Earth music is an ambient music form that is mostly inspired by nature. Originally it gained traction during the vast urbanisation of tokyo, because it enabled connecting to nature again.
-        What I like is its jazz-like complexity in soundscape designs, which draws one inside, and ranges more towards a meditative practice rather than 'bein entertained'
-        My project uses samples from native instruments, and explores applying machine learning for melody and rhythm generation.
+      <img style="margin-bottom:2%"  src="images/springwalk.png" alt="sprinwalk" width="60%">
+      <h6 style="margin-top:0%;max-width:60%;">This music builds on earlier work by Japanese artists united under the earth/environmental music genre.
+        Environmental music is mostly inspired by nature. In 80's Japan it gained traction during the vast urbanisation of tokyo, because it made listeners escape into nature again.
+      </br>
+    </br>With my own music project, Spring Walk Collection, I'm experimenting with the jazz-like complexity of nature soundscapes.
+    The resulting songs can reside in ambience, but carry melodic structure and complex rhythms that speak emotionally as well.
+        My project uses samples from native instruments, and heavily applies machine learning methods for melody and rhythm generation.
       </h6></center>
     </div>
     <div class=" twelve columns fade" > <center>
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/786219262&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/792784666&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/792777352&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/792776221&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/779802631&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
       <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/782303608&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
       <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/773970745&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/779802631&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
 
     </center>
     </div>
