--- a/index.html
+++ b/index.html
@@ -78,19 +78,22 @@
       </div>
 
     <!--  music ––––––––––––––––––––––––– -->
-      <div class="four columns fade" > <center> <a id="link" href="Illustrations.html"> <h4 style="margin-top:10%">Illustrations</h4> </a></center>
-      </div>
+
 
     <!-- word –––––––––––––––––––––-–––– -->
-    <div class="four columns fade" > <center> <a id="link" href="Music.html"> <h4 style="margin-top:0%">Music</h4> </a></center>
-    </div>
+    <div class="four columns fade" > <center> <a id="link" href="Music.html"> <h4 style="margin-top:10%">Music</h4> </a></center>
     </div>
 
+
     <div class="twelve columns fade" > <center>
-      <h5 style="margin-top:0%;max-width:70%;">This is a portfolio containing some creative and Machine-learning research endeavors.
-      You'll find my artistic machine-learning research projects, alongside illustration and earth-music explorations.
+      <h5 style="margin-top:0%;max-width:70%;">
+        This is a portfolio containing my latest creative and Machine-learning research endeavors.</br></br>
+        You'll find my artistic machine-learning research projects,
+        alongside experiments with <turqoise>generative & machine-learning environmental music</turqoise> explorations.
       </h5></center>
     </div>
+    
+
     <div class="twelve columns fade" style="margin-top: 5%">
       <center>
         <a href="https://twitter.com/Mark_Tension" class="fa fa-twitter"></a>
