--- a/ML.html
+++ b/ML.html
@@ -51,9 +51,11 @@
     </div>
     <div class="row">
       <div class="twelve columns fade" style="margin-top: 5%">
-        <center><img style="margin-bottom:0%" src="images/intro/actmax0.png" alt="icon" width="20%">
-          <img style="margin-bottom:2%" class="dimmed" src="images/intro/actmax5.png" alt="icon" width="20%" opacity="0.5">
-          <img style="margin-bottom:6%" class="dimmed" src="images/intro/actmax2.png" alt="icon" width="20%";><center>
+        <center>
+          <a  href= "ML.html"><img style="margin-bottom:0%"  src="images/intro/actmax0.png" alt="icon" width="20%" opacity="1"></a>
+          <a  href= "Music.html"><img style="margin-bottom:2%" class="dimmed" src="images/intro/actmax5.png" alt="icon" width="20%" opacity="0.5"></a>
+          <a  href= "index.html"><img style="margin-bottom:6%" class="dimmed" src="images/intro/actmax2.png" alt="icon" width="20%";>
+          <center>
 
       </div>
     </div>
@@ -67,8 +69,7 @@
       </div>
 
     <!--  music ––––––––––––––––––––––––– -->
-      <div class="four columns fade" > <center> <a id="link" href= "Illustrations.html"> <h4 style="margin-top:10%">Illustrations</h4> </a></center>
-      </div>
+
 
     <!-- word –––––––––––––––––––––-–––– -->
     <div class="four columns fade" > <center> <a id="link" href= "Music.html"> <h4 style="margin-top:0%">Music</h4> </a></center>
@@ -93,9 +94,11 @@
         </h6>
       </div>
       <div class="six colums">
-        <img style="margin-top:7%" src="images/ML/artartart.gif" width="50%" alt="hello">
-        <img style="margin-top:7%" src="images/ML/Clay2DGameView.gif" width="20%" alt="hello">
-        <img style="margin-top:7%" src="images/ML/betterGiph.gif" width="30%" alt="hello">
+        <img style="margin-top:7%" align="right" src="images/ML/artartart.gif" width="50%" alt="hello">
+        <img style="margin-top:3%" align="right" src="images/ML/Clay2DGameView.gif" width="20%" alt="hello">
+        <img style="margin-top:3%"  src="images/ML/betterGiph.gif" width="30%" alt="hello">
+        <img style="margin-top:3%" align="right" src="images/ML/torus.gif" width="40%" alt="hello">
+
 
       </div>
     </div>
