better description music

--- a/ML.html
+++ b/ML.html
@@ -54,7 +54,7 @@
         <center>
           <a  href= "ML.html"><img style="margin-bottom:0%"  src="images/intro/actmax0.png" alt="icon" width="20%" opacity="1"></a>
           <a  href= "Music.html"><img style="margin-bottom:2%" class="dimmed" src="images/intro/actmax5.png" alt="icon" width="20%" opacity="0.5"></a>
-          <a  href= "index.html"><img style="margin-bottom:6%" class="dimmed" src="images/intro/actmax2.png" alt="icon" width="20%";>
+          <a  href= "index.html"><img style="margin-bottom:6%" class="dimmed" src="images/intro/actmax2.png" alt="icon" width="20%";></a>
           <center>
 
       </div>
