--- a/Music.html
+++ b/Music.html
@@ -78,11 +78,11 @@
     <div class=" twelve columns fade" > <center>
       <img style="margin-bottom:2%"  src="images/springwalk.png" alt="sprinwalk" width="60%">
       <h6 style="margin-top:0%;max-width:60%;">This music builds on earlier work by Japanese artists united under the earth/environmental music genre.
-        Environmental music is mostly inspired by nature. In 80's Japan it gained traction during the vast urbanisation of tokyo, because it made listeners escape into nature again.
+        Environmental music is mostly inspired by nature. In 80's Japan it gained a lot of traction during the vast urbanisation of tokyo, and in my opinion it's the most interesting time/place within the scene.
       </br>
-    </br>With my own music project, Spring Walk Collection, I'm experimenting with the jazz-like complexity of nature soundscapes.
-    The resulting songs can reside in ambience, but carry melodic structure and complex rhythms that speak emotionally as well.
-        My project uses samples from native instruments, and heavily applies machine learning methods for melody and rhythm generation.
+    </br>My own music project, Spring Walk Collection, with the persona of Saida Kizuki is a tribute to this time and place. It's an experiment with the jazz-like complexity of nature soundscapes and unpredictability of rain.
+        The resulting songs can reside in ambience, but carries the melodic structure and complex rhythms that speak emotionally as well.
+        My project uses samples from native instruments, and applies machine learning methods for melody and rhythm generation.
       </h6></center>
     </div>
     <div class=" twelve columns fade" > <center>
