--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
     <!-- word –––––––––––––––––––––-–––– -->
     <div class="four columns fade" > <center> <a id="link" href="Music.html"> <h4 style="margin-top:10%">Music</h4> </a></center>
     </div>
+    
+    <div class="four columns fade" >   <center> <a id="link" href="other.html"> <h4 style="margin-top:0%">Other</h4> </a></center>
+
+    </div>
+
 
 
     <div class="twelve columns fade" > <center>
