--- a/Music.html
+++ b/Music.html
@@ -54,7 +54,7 @@
         <center>
           <a  href= "ML.html"><img style="margin-bottom:0%" class="dimmed" src="images/intro/actmax0.png" alt="icon" width="20%"></a>
           <a  href= "Music.html"><img style="margin-bottom:2%" src="images/intro/actmax5.png" alt="icon" width="20%"></a>
-          <a  href= "index.html"><img style="margin-bottom:6%" class="dimmed" src="images/intro/actmax2.png" alt="icon" width="20%";></a>
+          <a  href= "other.html"><img style="margin-bottom:6%" class="dimmed" src="images/intro/actmax2.png" alt="icon" width="20%";></a>
           <center>
 
       </div>
@@ -72,7 +72,10 @@
 
 
     <!-- word –––––––––––––––––––––-–––– -->
-    <div class="four columns fade" > <center> <a id="link" href= "Music.html"> <h4 style="margin-top:0%">Music</h4> </a></center>
+    <div class="four columns fade" > <center> <a id="link" href= "Music.html"> <h4 style="margin-top:10%">Music</h4> </a></center>
+    </div>
+    
+    <div class="four columns fade" > <center> <a id="link" href="other.html"> <h4 style="margin-top:0%">Other</h4> </a></center>
     </div>
 
     <div class=" twelve columns fade" > <center>
