--- a/other.html
+++ b/other.html
@@ -51,9 +51,11 @@
     </div>
     <div class="row">
       <div class="twelve columns fade" style="margin-top: 5%">
-        <center><img style="margin-bottom:0%" class="dimmed" src="images/intro/actmax0.png" alt="icon" width="20%">
-          <img style="margin-bottom:2%"  src="images/intro/actmax5.png" alt="icon" width="20%" opacity="0.5">
-          <img style="margin-bottom:6%" class="dimmed" src="images/intro/actmax2.png" alt="icon" width="20%";><center>
+        <center>
+          <a  href= "ML.html"><img style="margin-bottom:0%" class="dimmed" src="images/intro/actmax0.png" alt="icon" width="20%"></a>
+          <a  href= "Music.html"><img style="margin-bottom:2%" class="dimmed" src="images/intro/actmax5.png" alt="icon" width="20%"></a>
+          <a  href= "other.html"><img style="margin-bottom:6%"  src="images/intro/actmax2.png" alt="icon" width="20%";></a>
+          <center>
 
       </div>
     </div>
@@ -66,27 +68,25 @@
       <div class="four columns fade" > <center> <a id="link" href= "ML.html"> <h4 style="margin-top:15%" >MachineLearning </br> Adventures</h4> </a> </center>
       </div>
 
-    <!--  music ––––––––––––––––––––––––– -->
-      <div class="four columns fade" > <center> <a id="link" href= "Illustrations.html"> <h4 style="margin-top:10%">Illustrations</h4> </a></center>
+    <!-- word –––––––––––––––––––––-–––– -->
+    <div class="four columns fade" > <center> <a id="link" href= "Music.html"> <h4 style="margin-top:10%">Music</h4> </a></center>
+    </div>
+
+    <div class="four columns fade" >   <center> <a id="link" href="other.html"> <h4 style="margin-top:0%">Other</h4> </a></center>
       </div>
 
-    <!-- word –––––––––––––––––––––-–––– -->
-    <div class="four columns fade" > <center> <a id="link" href= "Music.html"> <h4 style="margin-top:0%">Music</h4> </a></center>
+
+    <div class=" twelve columns fade" > <center>
+      <h6 style="margin-top:0%;max-width:60%;">This is a first step in giving live visuals to my music via a MIDI bridge between ableton Live and Unity3D.
+        I've used the Unity MidiKlak package to make the bridge possible, and outputted ableton's midi as an external instrument into the midi driver.
+      </h6></center>
     </div>
+    <div class=" twelve columns fade" > <center>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/cMF9rZhAtcA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </center>
     </div>
 
-    <div class=" twelve columns" > <center>
-      </h2  ></center>
-    </div>
-    <center>
-    <div class=" four columns" >
-    <img style="margin-bottom:0%"  src="images/illustrations/painting0.png" alt="icon0" width="100%"></div>
-    <div class=" four columns" >
-    <img style="margin-bottom:0%"  src="images/illustrations/painting1.png" alt="icon1" width="100%"></div>
-    <div class=" four columns" >
-    <img style="margin-bottom:2%"  src="images/illustrations/painting2.png" alt="icon2" width="100%"></div>
 
-  </center>
 
   </div>
 
