--- a/other.html
+++ b/other.html
@@ -82,8 +82,7 @@
       </h6></center>
     </div>
     <div class=" twelve columns fade" > <center>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/cMF9rZhAtcA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </center>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/QgcP1_fxNBI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    </center>
     </div>
 
 
