--- a/Music.html
+++ b/Music.html
@@ -80,13 +80,27 @@
 
     <div class=" twelve columns fade" > <center>
       <img style="margin-bottom:2%"  src="images/springwalk.png" alt="sprinwalk" width="60%">
-      <h6 style="margin-top:0%;max-width:60%;">This music builds on earlier work by Japanese artists united under the earth/environmental music genre.
-        Environmental music is mostly inspired by nature. In 80's Japan it gained a lot of traction during the vast urbanisation of tokyo, and in my opinion it's the most interesting time/place within the scene.
-      </br>
-    </br>My own music project, Spring Walk Collection, with the persona of Saida Kizuki is a tribute to this time and place. It's an experiment with the jazz-like complexity of nature soundscapes and unpredictability of rain.
-        The resulting songs can reside in ambience, but carries the melodic structure and complex rhythms that speak emotionally as well.
-        My project uses samples from native instruments, and applies machine learning methods for melody and rhythm generation.
-      </h6></center>
+      <h6 style="margin-top:0%;max-width:60%;">
+
+        Criticality is the state between chaos and order. 
+        It is the fertile ground of existence: 
+        too much chaos, no harmony. 
+        Too much structure, nothing happens.
+        </br></br>
+        A zen garden puts nature’s chaos in the context of order as a means to appreciate it. 
+        It’s like like a framed curation of it to accentuate its beauty.
+        It is therefore a perfect place to meditate on, and appreciating the synchronistic nature of reality. 
+        </br></br>
+        Spring Walk Collection is an attempt to build a zen garden of sound.
+        Thereby to develop a deeper appreciation of the critical nature of reality, and its ocean of sound.
+        </br></br>
+        This music is an attempt to bring the human mind and nature closer to another though music. 
+        To move the mind along the river, meandering between harmony of birdcalls, the unpredictability of rain, and the infinite complexities of clouds.
+        </br></br>
+        In the end it’s all a big loving meditation on the play of chaos and order
+
+
+        </center>
     </div>
     <div class=" twelve columns fade" > <center>
       <!-- <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/816805714%3Fsecret_token%3Ds-JfVn9UlyN3M&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe> -->
