added onformative update

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
         alongside experiments with <turqoise>generative & machine-learning environmental music</turqoise> explorations.
       </h5></center>
     </div>
+
+    <center><img style="margin-top:3%"  src="images/ML/handFastGif.gif" width="50%" alt="hello"></center>
+
     
 
     <div class="twelve columns fade" style="margin-top: 5%">
