--- a/ML.html
+++ b/ML.html
@@ -84,7 +84,7 @@
         <h6 style="margin-top:0%;align:justify;">
           As a resident ML-researcher/artist at Onformative, Berlin, I'm working on a 3D sculpting project in Unity3D.
           The idea is using reinforcement learning, enabled in Unity via its ml-agents library.
-          The first stage is using a 2D environment to get the technique down.
+          The first stage was testing in a 2D environment to get the technique down.
           We're using an agent that gets a 2D input surrounding itself, which is a partial observation of the entire gridspace.
           It needs to make a target shape by adding, or deleting pixels that it needs to navigate to.
 </br>
@@ -93,14 +93,16 @@
           The different tools will allow different aesthetics to form, just like how different media for artsist result in different aesthetics.
         </br>
         </br>
-          The second stage is going 3D. To the right is a little teaser o that.
+          The second stage is going 3D. We're now actively experimenting on different tools, and ways to make sculpting as intuitive and effective as possible. 
         </h6>
       </div>
       <div class="six colums">
-        <img style="margin-top:7%" align="right" src="images/ML/artartart.gif" width="50%" alt="hello">
         <img style="margin-top:3%" align="right" src="images/ML/Clay2DGameView.gif" width="20%" alt="hello">
-        <img style="margin-top:3%"  src="images/ML/betterGiph.gif" width="30%" alt="hello">
-        <img style="margin-top:3%" align="right" src="images/ML/torus.gif" width="40%" alt="hello">
+        <img style="margin-top:7%" align="right" src="images/ML/artartart.gif" width="30%" alt="hello">
+
+
+        <img style="margin-top:3%"  align="right" src="images/ML/handFastGif.gif" width="50%" alt="hello">
+
 
 
       </div>
