--- a/ML.html
+++ b/ML.html
@@ -78,34 +78,20 @@
     <div class="four columns fade" > <center> <a id="link" href="other.html"> <h4 style="margin-top:0%">Other</h4> </a></center>
     </div>
     </div>
-    <div class=" twelve columns" >
-      <div class="six columns">
+    <div class=" twelve columns" align="left" style="margin-left: 20%,margin-right: 20%">
         <h5 > 2D & 3D sculpting with Unity </h5>
         <h6 style="margin-top:0%;align:justify;">
-          As a resident ML-researcher/artist at Onformative, Berlin, I'm working on a 3D sculpting project in Unity3D.
-          The idea is using reinforcement learning, enabled in Unity via its ml-agents library.
-          The first stage was testing in a 2D environment to get the technique down.
-          We're using an agent that gets a 2D input surrounding itself, which is a partial observation of the entire gridspace.
-          It needs to make a target shape by adding, or deleting pixels that it needs to navigate to.
-</br>
-</br>
-          The final idea is for people to witness real-time sculpting where it's about observing the agent intelligently going about its job, using and experimenting different tools.
-          The different tools will allow different aesthetics to form, just like how different media for artsist result in different aesthetics.
-        </br>
-        </br>
-          The second stage is going 3D. We're now actively experimenting on different tools, and ways to make sculpting as intuitive and effective as possible. 
+          As an ML-researcher/artist at Onformative, Berlin, I'm working on a 3D digital sculpting project in Unity3D.
+          We're using reinforcement learning, enabled in Unity via its ml-agents library, to train an agent to creatively remove parts of a block to get to a desired outcome.
+          The final version will have the agent using different tool shapes which will result in different aesthetics.
         </h6>
+
+      <div class="twelve columns" style="margin-bottom:10%">     
+        <img style="margin-top:0%" height="315"  align="center" src="images/ML/handFastGif.gif" width="50%" alt="hello">
+
+        <iframe width="50%" height="315" align="right" src="https://www.youtube.com/embed/vJuxmydJQP4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-      <div class="six colums">
-        <img style="margin-top:3%" align="right" src="images/ML/Clay2DGameView.gif" width="20%" alt="hello">
-        <img style="margin-top:7%" align="right" src="images/ML/artartart.gif" width="30%" alt="hello">
 
-
-        <img style="margin-top:3%"  align="right" src="images/ML/handFastGif.gif" width="50%" alt="hello">
-
-
-
-      </div>
     </div>
     <div class=" twelve columns" >
       <div class="six columns">
