adventures removed and extra vid

--- a/ML.html
+++ b/ML.html
@@ -65,7 +65,7 @@
      <div class="row" >
 
       <!-- photo  ––––––––––––––––––––––––– -->
-      <div class="four columns fade" > <center> <a id="link" href= "ML.html"> <h4 style="margin-top:15%" >MachineLearning </br> Adventures</h4> </a> </center>
+      <div class="four columns fade" > <center> <a id="link" href= "ML.html"> <h4 style="margin-top:15%" >MachineLearning </h4> </a> </center>
       </div>
 
     <!--  music ––––––––––––––––––––––––– -->
@@ -86,11 +86,13 @@
           The final version will have the agent using different tool shapes which will result in different aesthetics.
         </h6>
 
-      <div class="twelve columns" style="margin-bottom:10%">     
+      <div class="twelve columns" style="margin-bottom:0%">     
         <img style="margin-top:0%" height="315"  align="center" src="images/ML/handFastGif.gif" width="50%" alt="hello">
 
         <iframe width="50%" height="315" align="right" src="https://www.youtube.com/embed/vJuxmydJQP4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
+      <div class="twelve columns" style="margin-bottom:10%">     
+        <iframe width="50%" height="315" src="https://www.youtube.com/embed/h7aKyZKOP04" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>      </div>
 
     </div>
     <div class=" twelve columns" >
