--- a/other.html
+++ b/other.html
@@ -65,7 +65,7 @@
      <div class="row" >
 
       <!-- photo  ––––––––––––––––––––––––– -->
-      <div class="four columns fade" > <center> <a id="link" href= "ML.html"> <h4 style="margin-top:15%" >MachineLearning </br> Adventures</h4> </a> </center>
+      <div class="four columns fade" > <center> <a id="link" href= "ML.html"> <h4 style="margin-top:15%" >MachineLearning </h4> </a> </center>
       </div>
 
     <!-- word –––––––––––––––––––––-–––– -->
