--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <center><img style="margin-top:3%"  src="images/ML/handFastGif.gif" width="50%" alt="hello"></center>
 
-    
+    <iframe src="https://wordpress.com/read/feeds/96606663/posts/2353520067"></iframe>
 
     <div class="twelve columns fade" style="margin-top: 5%">
       <center>
