dark theme. ML post.

--- a/other.html
+++ b/other.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background:black">
 <head>
 
   <!-- load script
@@ -45,16 +45,16 @@
   <div class="container">
 
     <!-- welcome ––––––––––––––––––––––––– -->
-    <div class="row" align="right" style="margin-top:5%;margin-bottom:0%;">
+    <div class="row" align="center" style="margin-top:5%;margin-bottom:0%;">
       <a id="link2" href= "index.html"><h3>MarkTension</h3></a>
 
     </div>
     <div class="row">
       <div class="twelve columns fade" style="margin-top: 5%">
         <center>
-          <a  href= "ML.html"><img style="margin-bottom:0%" class="dimmed" src="images/intro/actmax0.png" alt="icon" width="20%"></a>
-          <a  href= "Music.html"><img style="margin-bottom:2%" class="dimmed" src="images/intro/actmax5.png" alt="icon" width="20%"></a>
-          <a  href= "other.html"><img style="margin-bottom:6%"  src="images/intro/actmax2.png" alt="icon" width="20%";></a>
+          <a  href= "ML.html"><img style="margin-bottom:0%" class="dimmed" src="images/tree1.png" alt="icon" width="20%"></a>
+          <a  href= "Music.html"><img style="margin-bottom:3%" class="dimmed" src="images/tree2.png" alt="icon" width="20%"></a>
+          <a  href= "other.html"><img style="margin-bottom:6%"  src="images/tree3.png" alt="icon" width="20%";></a>
           <center>
 
       </div>
@@ -65,11 +65,11 @@
      <div class="row" >
 
       <!-- photo  ––––––––––––––––––––––––– -->
-      <div class="four columns fade" > <center> <a id="link" href= "ML.html"> <h4 style="margin-top:15%" >MachineLearning </h4> </a> </center>
+      <div class="four columns fade" > <center> <a id="link" href= "ML.html"> <h4 style="margin-top:6%" >MachineLearning </h4> </a> </center>
       </div>
 
     <!-- word –––––––––––––––––––––-–––– -->
-    <div class="four columns fade" > <center> <a id="link" href= "Music.html"> <h4 style="margin-top:10%">Music</h4> </a></center>
+    <div class="four columns fade" > <center> <a id="link" href= "Music.html"> <h4 style="margin-top:3%">Music</h4> </a></center>
     </div>
 
     <div class="four columns fade" >   <center> <a id="link" href="other.html"> <h4 style="margin-top:0%">Other</h4> </a></center>
