--- a/index.html
+++ b/index.html
@@ -89,9 +89,11 @@
 
     <div class="twelve columns fade" > <center>
       <h5 style="margin-top:0%;max-width:70%;">
-        This is a portfolio containing my latest creative and Machine-learning research endeavors.</br></br>
-        You'll find my artistic machine-learning research projects,
-        alongside experiments with <turqoise>generative & machine-learning environmental music</turqoise> explorations.
+        This portfolio documents my explorations on technology-driven production of design and music.
+        </br></br>
+        Central to this approach is the application of mathematical models approximating biological systems, and machine learning methods.
+        </br></br>
+        The eventual goal is finding a space where nature's complexity, richness and criticality can be experienced in our digital livess.
       </h5></center>
     </div>
 
