--- a/index.html
+++ b/index.html
@@ -93,16 +93,18 @@
         </br></br>
         Central to this approach is the application of mathematical models approximating biological systems, and machine learning methods.
         </br></br>
-        The eventual goal is finding a space where nature's complexity, richness and criticality can be experienced in our digital livess.
+        The eventual goal is enriching our digital lives with nature's complexity, and criticality.
       </h5></center>
     </div>
 
 
     <div class="twelve columns fade" style="margin-top: 5%">
       <center>
-        <a href="https://twitter.com/Mark_Tension" class="fa fa-twitter"></a>
-        <a href="https://github.com/MarkTension" class="fa fa-github"></a>
-        <a href="https://www.instagram.com/sumakuschmark/" class="fa fa-instagram"></a>
+        <a href="https://twitter.com/Mark_Tension" class="fa fa-twitter fa-all"></a>
+        <a href="https://github.com/MarkTension" class="fa fa-github fa-all"></a>
+        <a href="https://www.instagram.com/sumakuschmark/" class="fa fa-instagram fa-all"></a>
+        <a href="https://www.linkedin.com/in/mark-tensen/" class="fa fa-linkedin fa-all"></a>
+        <a href="mailto:tensen.mark@gmail.com" class="fa fa-envelope fa-all"></a>
         <center>
     </div>
 
